<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.example.android.quizapp.MainActivity">

        <TextView
            style="@style/questionStyle"
            android:text="@string/q1" />

        <RadioGroup style="@style/radioGroupStyle">

            <RadioButton
                android:id="@+id/rb_q1a1_puzzled"
                style="@style/answerStyle"
                android:text="@string/q1a1" />

            <RadioButton
                android:id="@+id/rb_q1a2_tetris"
                style="@style/answerStyle"
                android:text="@string/q1a2" />

            <RadioButton
                android:id="@+id/rb_q1a3_russianfront"
                style="@style/answerStyle"
                android:text="@string/q1a3" />

            <RadioButton
                android:id="@+id/cb_q1a4_boulderdash"
                style="@style/answerStyle"
                android:text="@string/q1a4" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

        <TextView
            style="@style/questionStyle"
            android:text="@string/q2" />

        <RadioGroup style="@style/radioGroupStyle">

            <RadioButton
                android:id="@+id/rb_q2a1_asteroids"
                style="@style/answerStyle"
                android:text="@string/q2a1" />

            <RadioButton
                android:id="@+id/rb_q2a2_yar"
                style="@style/answerStyle"
                android:text="@string/q2a2" />

            <RadioButton
                android:id="@+id/rb_q2a3_pong"
                style="@style/answerStyle"
                android:text="@string/q2a3" />

            <RadioButton
                android:id="@+id/rb_q2a4_adventure"
                style="@style/answerStyle"
                android:text="@string/q2a4" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

        <TextView
            style="@style/questionStyle"
            android:text="@string/q3" />

        <RadioGroup style="@style/radioGroupStyle">

            <RadioButton
                android:id="@+id/rb_q3a1_carpenter"
                style="@style/answerStyle"
                android:text="@string/q3a1" />

            <RadioButton
                android:id="@+id/rb_q3a2_plumber"
                style="@style/answerStyle"
                android:text="@string/q3a2" />

            <RadioButton
                android:id="@+id/rb_q3a3_pizzamaker"
                style="@style/answerStyle"
                android:text="@string/q3a3" />

            <RadioButton
                android:id="@+id/rb_q3a4_zookeeper"
                style="@style/answerStyle"
                android:text="@string/q3a4" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

        <TextView
            style="@style/questionStyle"
            android:text="@string/q4" />

        <CheckBox
            android:id="@+id/cb_q4a1_mario"
            style="@style/answerStyle"
            android:layout_marginTop="16dp"
            android:text="@string/q4a1" />

        <CheckBox
            android:id="@+id/cb_q4a2_bowser"
            style="@style/answerStyle"
            android:text="@string/q4a2" />

        <CheckBox
            android:id="@+id/cb_q4a3_toad"
            style="@style/answerStyle"
            android:text="@string/q4a3" />

        <CheckBox
            android:id="@+id/cb_q4a4_luigi"
            style="@style/answerStyle"
            android:text="@string/q4a4" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

        <TextView
            style="@style/questionStyle"
            android:text="@string/q5" />

        <RadioGroup style="@style/radioGroupStyle">

            <RadioButton
                android:id="@+id/rb_q5a1_pizza"
                style="@style/answerStyle"
                android:text="@string/q5a1" />

            <RadioButton
                android:id="@+id/rb_q5a2_ball"
                style="@style/answerStyle"
                android:text="@string/q5a2" />

            <RadioButton
                android:id="@+id/rb_q5a3_coin"
                style="@style/answerStyle"
                android:text="@string/q5a3" />

            <RadioButton
                android:id="@+id/rb_q5a4_fish"
                style="@style/answerStyle"
                android:text="@string/q5a4" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

        <TextView
            style="@style/questionStyle"
            android:text="@string/q6" />

        <RadioGroup style="@style/radioGroupStyle">

            <RadioButton
                android:id="@+id/rb_q6a1_mortalkombat"
                style="@style/answerStyle"
                android:text="@string/q6a1" />

            <RadioButton
                android:id="@+id/rb_q6a2_killerinstinct"
                style="@style/answerStyle"
                android:text="@string/q6a2" />

            <RadioButton
                android:id="@+id/rb_q6a3_streetfighter"
                style="@style/answerStyle"
                android:text="@string/q6a3" />

            <RadioButton
                android:id="@+id/rb_q6a4_kingoffighters"
                style="@style/answerStyle"
                android:text="@string/q6a4" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

        <TextView
            style="@style/questionStyle"
            android:text="@string/q7" />

        <RadioGroup style="@style/radioGroupStyle">

            <RadioButton
                android:id="@+id/rb_q7a1_charizard"
                style="@style/answerStyle"
                android:text="@string/q7a1" />

            <RadioButton
                android:id="@+id/rb_q7a2_pikachu"
                style="@style/answerStyle"
                android:text="@string/q7a2" />

            <RadioButton
                android:id="@+id/rb_q7a3_mew"
                style="@style/answerStyle"
                android:text="@string/q7a3" />

            <RadioButton
                android:id="@+id/rb_q7a4_deoxys"
                style="@style/answerStyle"
                android:text="@string/q7a4" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

        <ImageView
            android:id="@+id/link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:scaleType="center"
            android:src="@drawable/link" />

        <TextView
            style="@style/questionStyle"
            android:text="@string/q8" />

        <RadioGroup style="@style/radioGroupStyle">

            <RadioButton
                android:id="@+id/rb_q8a1_zelda"
                style="@style/answerStyle"
                android:text="@string/q8a1" />

            <RadioButton
                android:id="@+id/rb_q8a2_link"
                style="@style/answerStyle"
                android:text="@string/q8a2" />

            <RadioButton
                android:id="@+id/rb_q8a3_sheik"
                style="@style/answerStyle"
                android:text="@string/q8a3" />

            <RadioButton
                android:id="@+id/rb_q8a4_tetra"
                style="@style/answerStyle"
                android:text="@string/q8a4" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

        <ImageView
            android:id="@+id/sonic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:scaleType="center"
            android:src="@drawable/sonic" />

        <TextView
            style="@style/questionStyle"
            android:text="@string/q9" />

        <RadioGroup style="@style/radioGroupStyle">

            <RadioButton
                android:id="@+id/rb_q9a1_knuckles"
                style="@style/answerStyle"
                android:text="@string/q9a1" />

            <RadioButton
                android:id="@+id/rb_q9a2_shadow"
                style="@style/answerStyle"
                android:text="@string/q9a2" />

            <RadioButton
                android:id="@+id/rb_q9a3_tails"
                style="@style/answerStyle"
                android:text="@string/q9a3" />

            <RadioButton
                android:id="@+id/rb_q9a4_sonic"
                style="@style/answerStyle"
                android:text="@string/q9a4" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

        <TextView
            style="@style/questionStyle"
            android:text="@string/q10" />

        <EditText
            android:id="@+id/question10_text_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/question10_hint_text"
            android:inputType="number" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/submitButton"
                style="@style/buttonStyle"
                android:onClick="submitAnswers"
                android:text="@string/submit" />

            <Button
                android:id="@+id/showAnswerButton"
                style="@style/buttonStyle"
                android:onClick="showCorrectAnswers"
                android:text="@string/answers" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>